--- a/src/components/customDropdown/CustomDropdown.scss
+++ b/src/components/customDropdown/CustomDropdown.scss
@@ -76,12 +76,6 @@
     color: black !important; // Change text color to black on hover
     box-shadow: none;
     font-weight: $bold !important;
-    opacity: 100% !important;
-  }
-}
-
-.dropdownMenu .dropdownItem {
-  &:hover {
-    color: black !important; // Increase specificity for hover color
+    opacity: 100 !important;
   }
 }
