Fixed misc things

--- a/src/components/forgotPassword/ForgotPassword.scss
+++ b/src/components/forgotPassword/ForgotPassword.scss
@@ -21,7 +21,7 @@
     padding: 0%;
   }
   .forgot-password-header {
-    font-family: 'Noto Sans';
+    font-family: $font;
     font-style: normal;
     font-size: 24px;
     font-weight: 700;
@@ -47,7 +47,7 @@
     line-height: 19px;
     letter-spacing: 0px;
     text-align: center;
-    font-family: 'Noto Sans';
+    font-family: $font;
     font-style: normal;
     color: black;
     margin-bottom: 20px;
