--- a/src/pages/user/components/jjcevents/JjcEvents.scss
+++ b/src/pages/user/components/jjcevents/JjcEvents.scss
@@ -28,7 +28,7 @@
 
   .centered-text {
     padding: 0 10px;
-    color: #28536b;
+    color: #2c5797;
     /* Adjust spacing as needed */
   }
 
@@ -46,6 +46,6 @@
   }
   .event-message {
     text-align: center;
-    color: #28536b;
+    color: #2c5797;
   }
 }
