--- a/src/components/forgotPasswordMessage/ForgotPasswordMessage.scss
+++ b/src/components/forgotPasswordMessage/ForgotPasswordMessage.scss
@@ -65,7 +65,7 @@
     left: auto;
     top: 230px;
     border-radius: nullpx;
-    font-family: Noto Sans;
+    font-family: $font;
     font-size: 14px;
     font-weight: 500;
     line-height: 19px;
@@ -78,7 +78,7 @@
 
   .message-content a:visited {
     border-radius: nullpx;
-    font-family: Noto Sans;
+    font-family: $font;
     font-size: 14px;
     font-weight: 500;
     line-height: 19px;
@@ -98,7 +98,7 @@
     left: auto;
     top: 250px;
     border-radius: nullpx;
-    font-family: Noto Sans;
+    font-family: $font;
     font-size: 14px;
     font-weight: 500;
     line-height: 19px;
@@ -110,7 +110,7 @@
 
   .message-content-1 a:visited {
     border-radius: nullpx;
-    font-family: Noto Sans;
+    font-family: $font;
     font-size: 14px;
     font-weight: 500;
     line-height: 19px;
@@ -129,7 +129,7 @@
     left: auto;
     top: 140px;
     border-radius: nullpx;
-    font-family: Noto Sans;
+    font-family: $font;
     font-size: 14px;
     font-weight: 500;
     line-height: 19px;
@@ -146,7 +146,7 @@
     left: auto;
     top: 40px;
     border-radius: nullpx;
-    font-family: Noto Sans;
+    font-family: $font;
     font-size: 24px;
     font-weight: 700;
     line-height: 33px;
