--- a/src/pages/landingpage/components/aboutUs/AboutUs.scss
+++ b/src/pages/landingpage/components/aboutUs/AboutUs.scss
@@ -1,46 +1,46 @@
-@import "../../../../utils/variables.scss";
+@import '../../../../utils/variables.scss';
 
 .aboutUsImage {
-    height: 300px;
-    background-color: #ccc;
-    background: url(../../../../assets/images/Bitmap.png);
-    background-size: cover;
-    background-position: center;
+  height: 300px;
+  background-color: #ccc;
+  background: url(../../../../assets/images/Bitmap.png);
+  background-size: cover;
+  background-position: center;
 }
 
 .aboutUsHeading {
-    text-align: center;
+  text-align: center;
 }
 
 .about-us {
-    width: 4rem;
-    border-color: $vividred;
+  width: 4rem;
+  border-color: $vividred;
 }
 
 .knowMore {
-    /* Know More */
+  /* Know More */
 
-    font-family: 'Noto Sans';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 20px;
-    /* identical to box height, or 143% */
-    border-radius: nullpx;
-    border-color: #FF3C00;
-    color: #FF3C00;
+  font-family: $font;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 20px;
+  /* identical to box height, or 143% */
+  border-radius: nullpx;
+  border-color: #ff3c00;
+  color: #ff3c00;
 }
 
 @media only screen and (max-width: 767px) {
-    .aboutUsImage {
-        height: 300px;
-    }
+  .aboutUsImage {
+    height: 300px;
+  }
 
-    .knowMoreBox {
-        text-align: center;
-    }
+  .knowMoreBox {
+    text-align: center;
+  }
 
-    .knowMore {
-        display: inline-block;
-    }
+  .knowMore {
+    display: inline-block;
+  }
 }
