--- a/src/components/forgotPasswordMessage/ForgotPasswordMessage.scss
+++ b/src/components/forgotPasswordMessage/ForgotPasswordMessage.scss
@@ -77,7 +77,7 @@
   }
 
   .message-content a:visited {
-    border-radius: nullpx;
+    border-radius: 0px;
     font-family: $font;
     font-size: 14px;
     font-weight: 500;
@@ -97,7 +97,7 @@
     width: auto;
     left: auto;
     top: 250px;
-    border-radius: nullpx;
+    border-radius: 0px;
     font-family: $font;
     font-size: 14px;
     font-weight: 500;
@@ -109,7 +109,7 @@
   }
 
   .message-content-1 a:visited {
-    border-radius: nullpx;
+    border-radius: 0px;
     font-family: $font;
     font-size: 14px;
     font-weight: 500;
@@ -128,7 +128,7 @@
     width: auto;
     left: auto;
     top: 140px;
-    border-radius: nullpx;
+    border-radius: 0px;
     font-family: $font;
     font-size: 14px;
     font-weight: 500;
@@ -145,7 +145,7 @@
     width: auto;
     left: auto;
     top: 40px;
-    border-radius: nullpx;
+    border-radius: 0px;
     font-family: $font;
     font-size: 24px;
     font-weight: 700;
