--- a/src/pages/user/components/faqs/Faqs.scss
+++ b/src/pages/user/components/faqs/Faqs.scss
@@ -5,6 +5,16 @@
   padding-right: 2rem;
   .faq-text {
     text-decoration: underline;
+    color: #2c5797;
+    font-style: normal;
+    font-weight: 800;
+    font-size: medium;
+  }
+  .faq-link a {
+    color: #2c5797;
+    font-style: normal;
+    font-weight: 500;
+    font-size: medium;
   }
   .disclaaimer {
     color: red;
