--- a/src/pages/user/components/jjcevents/JjcEvents.scss
+++ b/src/pages/user/components/jjcevents/JjcEvents.scss
@@ -29,6 +29,9 @@
   .centered-text {
     padding: 0 10px;
     color: #2c5797;
+    font-style: normal;
+    font-weight: 600;
+    font-size: medium;
     /* Adjust spacing as needed */
   }
 
@@ -47,5 +50,8 @@
   .event-message {
     text-align: center;
     color: #2c5797;
+    font-style: normal;
+    font-weight: 500;
+    font-size: medium;
   }
 }
