--- a/src/components/forgotPasswordMessage/ForgotPasswordMessage.scss
+++ b/src/components/forgotPasswordMessage/ForgotPasswordMessage.scss
@@ -65,7 +65,7 @@
     left: auto;
     top: 230px;
     border-radius: nullpx;
-    font-family: Noto Sans;
+    font-family: $font;
     font-size: 14px;
     font-weight: 500;
     line-height: 19px;
@@ -77,8 +77,8 @@
   }
 
   .message-content a:visited {
-    border-radius: nullpx;
-    font-family: Noto Sans;
+    border-radius: 0px;
+    font-family: $font;
     font-size: 14px;
     font-weight: 500;
     line-height: 19px;
@@ -97,8 +97,8 @@
     width: auto;
     left: auto;
     top: 250px;
-    border-radius: nullpx;
-    font-family: Noto Sans;
+    border-radius: 0px;
+    font-family: $font;
     font-size: 14px;
     font-weight: 500;
     line-height: 19px;
@@ -109,8 +109,8 @@
   }
 
   .message-content-1 a:visited {
-    border-radius: nullpx;
-    font-family: Noto Sans;
+    border-radius: 0px;
+    font-family: $font;
     font-size: 14px;
     font-weight: 500;
     line-height: 19px;
@@ -128,8 +128,8 @@
     width: auto;
     left: auto;
     top: 140px;
-    border-radius: nullpx;
-    font-family: Noto Sans;
+    border-radius: 0px;
+    font-family: $font;
     font-size: 14px;
     font-weight: 500;
     line-height: 19px;
@@ -145,8 +145,8 @@
     width: auto;
     left: auto;
     top: 40px;
-    border-radius: nullpx;
-    font-family: Noto Sans;
+    border-radius: 0px;
+    font-family: $font;
     font-size: 24px;
     font-weight: 700;
     line-height: 33px;
