--- a/src/pages/user/components/jjcevents/JjcEvents.scss
+++ b/src/pages/user/components/jjcevents/JjcEvents.scss
@@ -28,7 +28,10 @@
 
   .centered-text {
     padding: 0 10px;
-    color: #28536b;
+    color: #2c5797;
+    font-style: normal;
+    font-weight: 800;
+    font-size: medium;
     /* Adjust spacing as needed */
   }
 
@@ -46,6 +49,9 @@
   }
   .event-message {
     text-align: center;
-    color: #28536b;
+    color: #2c5797;
+    font-style: normal;
+    font-weight: 500;
+    font-size: medium;
   }
 }
