--- a/src/components/events/EventsCard.scss
+++ b/src/components/events/EventsCard.scss
@@ -3,8 +3,7 @@
 }
 
 .past_events,
-.ongoing_events,
-.upcoming_events {
+.ongoing_events {
   .card img {
     width: 100%;
     height: 50%; // Adjust the height as needed
