--- a/src/pages/landingpage/components/leadership/Leadership.css
+++ b/src/pages/landingpage/components/leadership/Leadership.css
@@ -38,3 +38,10 @@
   align-items: center;
   padding: 10px;
 }
+.leadership-image {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
